--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+/* .clearfix:before, */
+/* .clearfix:after, */
+.container:before,
+.container:after,
+/* .container-fluid:before, */
+/* .container-fluid:after, */
+/* .row:before, */
+/* .row:after, */
+/* .nav:before, */
+.nav:after {
+  content: " ";
+  display: table;
+}
+/* .clearfix:after, */
+.container:after,
+/* .container-fluid:after, */
+/* .row:after, */
+.nav:after {
+  clear: both;
+}
