--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,19 @@ code {
   }
 }
 
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 /* .clearfix:before, */
 /* .clearfix:after, */
 .container:before,
 .container:after,
 /* .container-fluid:before, */
 /* .container-fluid:after, */
-/* .row:before, */
-/* .row:after, */
+.row:before,
+.row:after,
 /* .nav:before, */
 .nav:after {
   content: " ";
@@ -49,7 +54,7 @@ code {
 /* .clearfix:after, */
 .container:after,
 /* .container-fluid:after, */
-/* .row:after, */
+.row:after,
 .nav:after {
   clear: both;
 }
