--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,8 @@ code {
   margin-right: -15px;
 }
 
-/* .clearfix:before, */
-/* .clearfix:after, */
+.clearfix:before,
+.clearfix:after,
 .container:before,
 .container:after,
 /* .container-fluid:before, */
@@ -48,10 +48,10 @@ code {
 .row:after,
 /* .nav:before, */
 .nav:after {
-  content: " ";
+  content: ' ';
   display: table;
 }
-/* .clearfix:after, */
+.clearfix:after,
 .container:after,
 /* .container-fluid:after, */
 .row:after,
@@ -60,4 +60,103 @@ code {
 }
 .colored {
   color: #1fd3ec;
+}
+.colored-orange {
+  color: #f1754f;
+}
+.btn > .caret,
+.dropup > .btn > .caret {
+  border-top-color: #000 !important;
+}
+.btn {
+  display: inline-block;
+  position: relative;
+  height: 46px;
+  line-height: 44px;
+  padding: 0 25px;
+  border: 1px solid #1fd3ec;
+  color: #000000;
+  font-weight: 600;
+  font-size: 18px;
+  z-index: 1;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.btn i {
+  font-size: 14px;
+  padding-right: 10px;
+}
+.btn:before {
+  display: block;
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+  background: #1fd3ec;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.btn.btn-xs {
+  height: 30px;
+  line-height: 27px;
+  padding: 0 10px;
+  font-size: 14px;
+}
+.btn.btn-xs:before {
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+}
+.btn.btn-sm {
+  height: 35px;
+  line-height: 33px;
+  font-size: 16px;
+  padding: 0 15px;
+}
+.btn.btn-sm:before {
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+}
+.btn.btn-md {
+  height: 40px;
+  line-height: 38px;
+  font-size: 16px;
+  padding: 0 20px;
+}
+.btn.btn-md::before {
+  top: 3px;
+  left: 3px;
+  bottom: 3px;
+  right: 3px;
+}
+.btn.orange {
+  border-color: #f1754f;
+}
+.btn.orange:before {
+  background: #f1754f;
+}
+.btn:hover {
+  border-color: #f1754f;
+  color: #000000;
+}
+.btn:hover:before {
+  background: #f1754f;
+}
+.btn:hover.orange {
+  border-color: #1fd3ec;
+}
+.btn:hover.orange:before {
+  background: #1fd3ec;
 }
