--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.site-content.no-padding {
+  padding-top: 0;
+}
+@media all and (max-width: 991px) {
+  .site-content.no-padding {
+    padding-top: 0;
+  }
+}
