--- a/src/components/albums/style.css
+++ b/src/components/albums/style.css
@@ -144,8 +144,8 @@
     max-width: 420px;
   }
 }
-/* .img-responsive {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  } */
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
