--- a/src/index.css
+++ b/src/index.css
@@ -435,18 +435,18 @@ img {
 .clearfix:after,
 .container:before,
 .container:after,
-/* .container-fluid:before, */
-/* .container-fluid:after, */
+.container-fluid:before,
+.container-fluid:after,
 .row:before,
 .row:after,
-/* .nav:before, */
+.nav:before,
 .nav:after {
-  content: ' ';
+  content: " ";
   display: table;
 }
 .clearfix:after,
 .container:after,
-/* .container-fluid:after, */
+.container-fluid:after,
 .row:after,
 .nav:after {
   clear: both;
