--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -99,8 +99,8 @@ figure {
 }
 hr {
   -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
   height: 0;
 }
 pre {
@@ -130,9 +130,9 @@ select {
   text-transform: none;
 }
 button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   cursor: pointer;
 }
@@ -148,25 +148,25 @@ input::-moz-focus-inner {
 input {
   line-height: normal;
 }
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
 }
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 fieldset {
@@ -200,7 +200,7 @@ th {
     background: transparent !important;
     color: #000 !important;
     -webkit-box-shadow: none !important;
-            box-shadow: none !important;
+    box-shadow: none !important;
     text-shadow: none !important;
   }
   a,
@@ -208,14 +208,14 @@ th {
     text-decoration: underline;
   }
   a[href]:after {
-    content: " (" attr(href) ")";
+    content: ' (' attr(href) ')';
   }
   abbr[title]:after {
-    content: " (" attr(title) ")";
+    content: ' (' attr(title) ')';
   }
-  a[href^="#"]:after,
-  a[href^="javascript:"]:after {
-    content: "";
+  a[href^='#']:after,
+  a[href^='javascript:']:after {
+    content: '';
   }
   pre,
   blockquote {
@@ -311,6 +311,10 @@ hr {
 }
 
 /* theme */
+i {
+  top: 0;
+  bottom: 0;
+}
 body {
   background: #000000 url(./assets/imgs/elements/bg-3.png) fixed;
   position: relative;
@@ -401,155 +405,4 @@ hr.tech-hr.mb-40 {
 img {
   max-width: 100%;
   height: auto;
-}
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
-
-
-
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-.clearfix:before,
-.clearfix:after,
-.container:before,
-.container:after,
-.container-fluid:before,
-.container-fluid:after,
-.row:before,
-.row:after,
-.nav:before,
-.nav:after {
-  content: " ";
-  display: table;
-}
-.clearfix:after,
-.container:after,
-.container-fluid:after,
-.row:after,
-.nav:after {
-  clear: both;
-}
-.colored {
-  color: #1fd3ec;
-}
-.colored-orange {
-  color: #f1754f;
-}
-.btn > .caret,
-.dropup > .btn > .caret {
-  border-top-color: #000 !important;
-}
-.btn {
-  display: inline-block;
-  position: relative;
-  height: 46px;
-  line-height: 44px;
-  padding: 0 25px;
-  border: 1px solid #1fd3ec;
-  color: #000000;
-  font-weight: 600;
-  font-size: 18px;
-  z-index: 1;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.btn i {
-  font-size: 14px;
-  padding-right: 10px;
-}
-.btn:before {
-  display: block;
-  content: '';
-  position: absolute;
-  z-index: -1;
-  top: 3px;
-  left: 3px;
-  right: 3px;
-  bottom: 3px;
-  background: #1fd3ec;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-.btn.btn-xs {
-  height: 30px;
-  line-height: 27px;
-  padding: 0 10px;
-  font-size: 14px;
-}
-.btn.btn-xs:before {
-  top: 2px;
-  left: 2px;
-  right: 2px;
-  bottom: 2px;
-}
-.btn.btn-sm {
-  height: 35px;
-  line-height: 33px;
-  font-size: 16px;
-  padding: 0 15px;
-}
-.btn.btn-sm:before {
-  top: 3px;
-  left: 3px;
-  right: 3px;
-  bottom: 3px;
-}
-.btn.btn-md {
-  height: 40px;
-  line-height: 38px;
-  font-size: 16px;
-  padding: 0 20px;
-}
-.btn.btn-md::before {
-  top: 3px;
-  left: 3px;
-  bottom: 3px;
-  right: 3px;
-}
-.btn.orange {
-  border-color: #f1754f;
-}
-.btn.orange:before {
-  background: #f1754f;
-}
-.btn:hover {
-  border-color: #f1754f;
-  color: #000000;
-}
-.btn:hover:before {
-  background: #f1754f;
-}
-.btn:hover.orange {
-  border-color: #1fd3ec;
-}
-.btn:hover.orange:before {
-  background: #1fd3ec;
 }
