--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 html {
   font-size: 12px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 code {
