--- a/src/App.css
+++ b/src/App.css
@@ -915,3 +915,50 @@
   height: 220px;
   padding-top: 20px;
 }
+.relative-pos {
+  position: relative;
+}
+.widget {
+  padding-bottom: 60px;
+}
+.widget .widget-title {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #f1754f;
+}
+.widget .sep {
+  height: 1px;
+  width: 64px;
+  margin: 20px 0 35px;
+  border-bottom: 1px dashed #1fd3ec;
+}
+.social-icons li {
+  display: inline-block;
+  margin-right: 5px;
+}
+.social-icons li:last-child {
+  margin-right: 0;
+}
+.social-icons li a {
+  display: block;
+  width: 38px;
+  height: 38px;
+  line-height: 36px;
+  text-align: center;
+  font-size: 20px;
+  background: #1fd3ec;
+  color: #000000;
+  border: 1px solid #1fd3ec;
+  -webkit-box-shadow: inset 0px 0px 0px 3px #000000;
+  -moz-box-shadow: inset 0px 0px 0px 3px #000000;
+  box-shadow: inset 0px 0px 0px 3px #000000;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.social-icons li a:hover {
+  background: #f1754f;
+  border-color: #f1754f;
+}
