--- a/src/components/albums/style.css
+++ b/src/components/albums/style.css
@@ -149,3 +149,132 @@
   max-width: 100%;
   height: auto;
 }
+.album-single-page-wrapper .album-single .album-name {
+  padding-bottom: 30px;
+}
+.album-single-page-wrapper .album-single .img-wrapper {
+  border: 1px solid #1fd3ec;
+  padding: 5px;
+  max-width: 350px;
+}
+.album-single-page-wrapper .album-single .album-info {
+  margin-top: 40px;
+}
+.album-single-page-wrapper .album-single .album-info .title {
+  text-transform: uppercase;
+  font-weight: 600;
+  padding-bottom: 20px;
+  color: #f1754f;
+}
+.album-single-page-wrapper .album-single .album-info ul.meta li {
+  display: block;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+}
+.album-single-page-wrapper
+  .album-single
+  .album-info
+  ul.meta
+  li
+  span:first-child {
+  text-transform: uppercase;
+  padding-right: 15px;
+}
+.album-single-page-wrapper .album-single .album-info .buy {
+  border: 1px dashed #f1754f;
+  padding: 0 15px 15px;
+  margin-top: 25px;
+}
+.album-single-page-wrapper .album-single .album-info .buy .price,
+.album-single-page-wrapper .album-single .album-info .buy .btn {
+  display: block;
+  float: left;
+  margin-top: 15px;
+}
+.album-single-page-wrapper .album-single .album-info .buy .price {
+  font-weight: 600;
+  padding-top: 10px;
+}
+@media all and (min-width: 992px) {
+  .album-single-page-wrapper .album-single .album-info .buy .btn {
+    float: right;
+  }
+}
+.album-single-page-wrapper .album-single .album-info p {
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 768px) {
+  .album-single-page-wrapper .album-single .album-info {
+    margin-bottom: 40px;
+    max-width: 400px;
+  }
+  .album-single-page-wrapper .album-single .album-info .price {
+    margin-right: 45px;
+  }
+}
+.album-single-page-wrapper .album-single .album-entry-content {
+  padding-top: 40px;
+}
+.album-single-page-wrapper .album-single .album-entry-content p {
+  margin-top: 15px;
+}
+.album-single-page-wrapper .similar-albums {
+  padding-top: 100px;
+}
+.album-single-page-wrapper .similar-albums h3 {
+  display: block;
+  position: relative;
+  padding-left: 15px;
+}
+.album-single-page-wrapper .similar-albums h3:before {
+  display: block;
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  width: 4px;
+  height: 24px;
+  background: #f1754f;
+}
+.album-single-page-wrapper .similar-albums .similar-album {
+  display: block;
+  position: relative;
+  border: 1px solid #1fd3ec;
+  padding: 5px;
+  margin-top: 30px;
+  max-width: 400px;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.album-single-page-wrapper .similar-albums .similar-album .info-block {
+  display: block;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 8px 20px;
+  background: rgba(11, 13, 19, 0.95);
+}
+.album-single-page-wrapper .similar-albums .similar-album .info-block h4 {
+  text-transform: uppercase;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+.album-single-page-wrapper .similar-albums .similar-album .info-block h5 {
+  color: #1fd3ec;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.album-single-page-wrapper .similar-albums .similar-album:hover {
+  border-color: #f1754f;
+}
+.album-single-page-wrapper .similar-albums .similar-album:hover .info-block h5 {
+  color: #f1754f;
+}
