--- a/src/components/musicplayer/style.css
+++ b/src/components/musicplayer/style.css
@@ -132,6 +132,12 @@
   margin-right: 10px;
   margin-top: 10px;
 }
+.jp-play-wrapper-small {
+  display: block;
+  margin-left: auto;
+  margin-right: 6px;
+  margin-top: 6px;
+}
 .home-player-wrapper-2
   .interface-round-wrapper
   .jp-gui
