--- a/src/App.css
+++ b/src/App.css
@@ -972,3 +972,41 @@
 #filter li.selected::before {
   background: #f1754f;
 }
+.page-header {
+  text-align: center;
+  border-top: 1px solid #1fd3ec;
+  margin-top: -1px;
+  border-bottom: 1px solid #1fd3ec;
+  padding: 7px 0;
+}
+.page-header .ph-inner-wrapper {
+  border-top: 1px solid #f1754f;
+  border-bottom: 1px solid #f1754f;
+  padding: 35px 0;
+}
+.page-header .ph-inner-wrapper .title {
+  text-transform: uppercase;
+  font-weight: 600;
+  display: inline-block;
+  position: relative;
+  padding: 12px 30px;
+  line-height: 24px;
+  letter-spacing: 5px;
+  border-top: 1px dashed #1fd3ec;
+  border-bottom: 1px dashed #1fd3ec;
+}
+.page-header .ph-inner-wrapper .title:before,
+.page-header .ph-inner-wrapper .title:after {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 10%;
+  left: -3px;
+  width: 3px;
+  height: 80%;
+  background: #f1754f;
+}
+.page-header .ph-inner-wrapper .title:after {
+  left: auto;
+  right: -3px;
+}
