--- a/src/components/gallery/style.css
+++ b/src/components/gallery/style.css
@@ -72,3 +72,47 @@
   opacity: 1;
   top: 50%;
 }
+.gallery-video-wrapper {
+  margin-bottom: 30px;
+  position: relative;
+  border: 1px solid #1fd3ec;
+  padding: 5px;
+  -webkit-box-shadow: inset 0px 0px 0px 5px #000000;
+  -moz-box-shadow: inset 0px 0px 0px 5px #000000;
+  box-shadow: inset 0px 0px 0px 5px #000000;
+}
+.gallery-video-wrapper .info-block {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  right: 5px;
+  padding: 15px 0;
+  background: rgba(0, 0, 0, 0.93);
+  padding-left: 75px;
+}
+.gallery-video-wrapper .info-block .play {
+  text-align: center;
+  position: absolute;
+  left: 0px;
+  top: 0;
+  width: 75px;
+  line-height: 75px;
+  height: 75px;
+  margin-right: 75px;
+  font-size: 20px;
+  color: white;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+.gallery-video-wrapper .info-block h3 {
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 3px;
+}
+.gallery-video-wrapper:hover .play,
+.gallery-video-wrapper:focus .play {
+  color: #f1754f;
+}
